--- a/modaclouds-scalingsdatests/resources/configuration.properties
+++ b/modaclouds-scalingsdatests/resources/configuration.properties
@@ -46,13 +46,19 @@ httpagent_SSH_USER=ubuntu
 httpagent_SSH_PASS=ubuntu
 httpagent_PROTOCOL=http
 httpagent_PORT=8080
-httpagent_DOWNLOADER=cd ~ && curl -O https://raw.githubusercontent.com/deib-polimi/modaclouds-tests/master/machines/HTTPAgent/downloadEverything.sh
-httpagent_INSTALLER=cd ~ && bash downloadEverything.sh && bash installEverything
-httpagent_UPDATER=bash /home/ubuntu/updateEverything
-httpagent_STARTER=sudo bash /home/ubuntu/startHTTPAgent %2$s && source /home/ubuntu/.bashrc && bash /home/ubuntu/startImperialDC
+#httpagent_DOWNLOADER=cd ~ && curl -O https://raw.githubusercontent.com/deib-polimi/modaclouds-tests/master/machines/HTTPAgent/downloadEverything.sh
+#httpagent_INSTALLER=cd ~ && bash downloadEverything.sh && bash installEverything
+#httpagent_UPDATER=bash /home/ubuntu/updateEverything
+#httpagent_STARTER=sudo bash /home/ubuntu/startHTTPAgent %2$s && source /home/ubuntu/.bashrc && bash /home/ubuntu/startImperialDC
+httpagent_DOWNLOADER=echo uffa
+httpagent_INSTALLER=echo uffa
+httpagent_UPDATER=echo uffa
+httpagent_STARTER=echo uffa
 httpagent_RETRIEVE_FILES=/tmp/imperial_dc.log;/home/ubuntu/logs/catalina.out;/home/ubuntu/logs/catalina.log;/home/ubuntu/logs/host-manager.log;/home/ubuntu/logs/localhost.log;/home/ubuntu/logs/localhost_access_log.txt;/home/ubuntu/logs/manager.log
-httpagent_ADD_TO_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/add_to_loadBalancer %s
-httpagent_DEL_FROM_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/deregister_from_lb %s
+#httpagent_ADD_TO_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/add_to_loadBalancer %s
+#httpagent_DEL_FROM_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/deregister_from_lb %s
+httpagent_ADD_TO_LOAD_BALANCER=echo uffa
+httpagent_DEL_FROM_LOAD_BALANCER=echo uffa
 httpagent_METRICS=CPUUtilization
 httpagent_NAME=HTTPAgent
 
