--- a/modaclouds-scalingsdatests/pom.xml
+++ b/modaclouds-scalingsdatests/pom.xml
@@ -37,10 +37,10 @@
 			<id>rickdesantis-snapshots</id>
 			<url>https://github.com/rickdesantis/mvn-repo/raw/master/snapshots</url>
 		</repository>
-        <repository>
-            <id>cloudml-snapshots</id>
-            <url>http://cml.cloudapp.net:8081/nexus/content/repositories/snapshots</url>
-        </repository>
+		<repository>
+			<id>cloudml-snapshots</id>
+			<url>http://cml.cloudapp.net:8081/nexus/content/repositories/snapshots</url>
+		</repository>
 	</repositories>
 
 	<build>
@@ -94,37 +94,37 @@
 			</plugin>
 
 			<plugin>
-                <groupId>org.jvnet.jaxb2.maven2</groupId>
-                <artifactId>maven-jaxb2-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>common-schemas</id>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <args>
-                                <arg>-XtoString</arg>
-                                <arg>-Xequals</arg>
-                                <arg>-XhashCode</arg>
-                                <arg>-Xcopyable</arg>
-                                <arg>-Xmergeable</arg>
-                            </args>
-                            <plugins>
-                                <plugin>
-                                    <groupId>org.jvnet.jaxb2_commons</groupId>
-                                    <artifactId>jaxb2-basics</artifactId>
-                                    <version>0.6.5</version>
-                                </plugin>
-                            </plugins>
-                            <extension>true</extension>
-                            <schemaDirectory>${project.basedir}/resources/schemas</schemaDirectory>
+				<groupId>org.jvnet.jaxb2.maven2</groupId>
+				<artifactId>maven-jaxb2-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>common-schemas</id>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+							<args>
+								<arg>-XtoString</arg>
+								<arg>-Xequals</arg>
+								<arg>-XhashCode</arg>
+								<arg>-Xcopyable</arg>
+								<arg>-Xmergeable</arg>
+							</args>
+							<plugins>
+								<plugin>
+									<groupId>org.jvnet.jaxb2_commons</groupId>
+									<artifactId>jaxb2-basics</artifactId>
+									<version>0.6.5</version>
+								</plugin>
+							</plugins>
+							<extension>true</extension>
+							<schemaDirectory>${project.basedir}/resources/schemas</schemaDirectory>
                             <!-- <generatePackage>it.polimi.modaclouds.space4cloud.line</generatePackage> -->
-                            <generateDirectory>${project.basedir}/src</generateDirectory>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+							<generateDirectory>${project.basedir}/src</generateDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 
 
 			<plugin>
@@ -151,67 +151,67 @@
 			</plugin>
 		</plugins>
 		<pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.eclipse.m2e</groupId>
-                    <artifactId>lifecycle-mapping</artifactId>
-                    <version>1.0.0</version>
-                    <configuration>
-                        <lifecycleMappingMetadata>
-                            <pluginExecutions>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>org.apache.maven.plugins</groupId>
-                                        <artifactId>maven-dependency-plugin</artifactId>
-                                        <versionRange>[2.0,)</versionRange>
-                                        <goals>
-                                            <goal>copy-dependencies</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <execute />
-                                    </action>
-                                </pluginExecution>
-                            </pluginExecutions>
-                        </lifecycleMappingMetadata>
-                    </configuration>
-                </plugin>
+			<plugins>
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.apache.maven.plugins</groupId>
+										<artifactId>maven-dependency-plugin</artifactId>
+										<versionRange>[2.0,)</versionRange>
+										<goals>
+											<goal>copy-dependencies</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<execute />
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
 
-                <plugin>
-                    <groupId>org.jvnet.jaxb2.maven2</groupId>
-                    <artifactId>maven-jaxb2-plugin</artifactId>
-                    <version>0.11.0</version>
-                    <executions>
-                        <execution>
-                            <id>common-schemas</id>
-                            <goals>
-                                <goal>generate</goal>
-                            </goals>
-                            <configuration>
-                                <args>
-                                    <arg>-XtoString</arg>
-                                    <arg>-Xequals</arg>
-                                    <arg>-XhashCode</arg>
-                                    <arg>-Xcopyable</arg>
-                                    <arg>-Xmergeable</arg>
-                                </args>
-                                <plugins>
-                                    <plugin>
-                                        <groupId>org.jvnet.jaxb2_commons</groupId>
-                                        <artifactId>jaxb2-basics</artifactId>
-                                        <version>0.6.5</version>
-                                    </plugin>
-                                </plugins>
-                                <extension>true</extension>
-                                <schemaDirectory>${project.basedir}/resources/schemas</schemaDirectory>
+				<plugin>
+					<groupId>org.jvnet.jaxb2.maven2</groupId>
+					<artifactId>maven-jaxb2-plugin</artifactId>
+					<version>0.11.0</version>
+					<executions>
+						<execution>
+							<id>common-schemas</id>
+							<goals>
+								<goal>generate</goal>
+							</goals>
+							<configuration>
+								<args>
+									<arg>-XtoString</arg>
+									<arg>-Xequals</arg>
+									<arg>-XhashCode</arg>
+									<arg>-Xcopyable</arg>
+									<arg>-Xmergeable</arg>
+								</args>
+								<plugins>
+									<plugin>
+										<groupId>org.jvnet.jaxb2_commons</groupId>
+										<artifactId>jaxb2-basics</artifactId>
+										<version>0.6.5</version>
+									</plugin>
+								</plugins>
+								<extension>true</extension>
+								<schemaDirectory>${project.basedir}/resources/schemas</schemaDirectory>
                                 <!-- <generatePackage>it.polimi.modaclouds.space4cloud.line</generatePackage> -->
-                                <generateDirectory>${project.basedir}/src</generateDirectory>
-                            </configuration>
-                        </execution>
-                    </executions>
-                </plugin>
-            </plugins>
-        </pluginManagement>
+								<generateDirectory>${project.basedir}/src</generateDirectory>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 	<dependencies>
 		<dependency>
@@ -250,79 +250,84 @@
 			<version>2.8.1</version>
 		</dependency>
 		<dependency>
-            <groupId>org.jfree</groupId>
-            <artifactId>jfreechart</artifactId>
-            <version>1.0.19</version>
-        </dependency>
-        <dependency>
-            <groupId>org.cloudml</groupId>
-            <artifactId>websocket</artifactId>
-            <version>2.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.cloudml</groupId>
-            <artifactId>ui.shell</artifactId>
-            <version>2.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>it.polimi.tower4clouds</groupId>
-            <artifactId>rules</artifactId>
-            <version>0.3-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>log4j-over-slf4j</artifactId>
-                    <groupId>org.slf4j</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>it.polimi.tower4clouds</groupId>
-            <artifactId>manager-api</artifactId>
-            <version>0.3-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>log4j-over-slf4j</artifactId>
-                    <groupId>org.slf4j</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>it.polimi.modaclouds.qos-models</groupId>
-            <artifactId>qos-models</artifactId>
-            <version>3.0.1</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>log4j-over-slf4j</artifactId>
-                    <groupId>org.slf4j</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+			<groupId>org.jfree</groupId>
+			<artifactId>jfreechart</artifactId>
+			<version>1.0.19</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cloudml</groupId>
+			<artifactId>websocket</artifactId>
+			<version>2.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cloudml</groupId>
+			<artifactId>ui.shell</artifactId>
+			<version>2.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>it.polimi.tower4clouds</groupId>
+			<artifactId>rules</artifactId>
+			<version>0.3-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>log4j-over-slf4j</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>it.polimi.tower4clouds</groupId>
+			<artifactId>manager-api</artifactId>
+			<version>0.3-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>log4j-over-slf4j</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>it.polimi.modaclouds.qos-models</groupId>
+			<artifactId>qos-models</artifactId>
+			<version>3.0.1</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>log4j-over-slf4j</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 
-        <dependency>
-            <groupId>org.jvnet.jaxb2_commons</groupId>
-            <artifactId>jaxb2-basics-runtime</artifactId>
-            <version>0.6.5.1</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.4</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.6</version>
-        </dependency>
-        <dependency>
-            <groupId>it.polimi.tower4clouds</groupId>
-            <artifactId>common</artifactId>
-            <version>0.3-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>log4j-over-slf4j</artifactId>
-                    <groupId>org.slf4j</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+		<dependency>
+			<groupId>org.jvnet.jaxb2_commons</groupId>
+			<artifactId>jaxb2-basics-runtime</artifactId>
+			<version>0.6.5.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
+		<dependency>
+			<groupId>it.polimi.tower4clouds</groupId>
+			<artifactId>common</artifactId>
+			<version>0.3-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>log4j-over-slf4j</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty.websocket</groupId>
+			<artifactId>websocket-client</artifactId>
+			<version>9.3.1.v20150714</version>
+		</dependency>
 	</dependencies>
 </project>
