--- a/modaclouds-scalingsdatests/pom.xml
+++ b/modaclouds-scalingsdatests/pom.xml
@@ -325,9 +325,9 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.jetty.websocket</groupId>
-			<artifactId>websocket-client</artifactId>
-			<version>9.3.1.v20150714</version>
+			<groupId>javax.websocket</groupId>
+			<artifactId>javax.websocket-api</artifactId>
+			<version>1.1</version>
 		</dependency>
 	</dependencies>
 </project>
