--- a/modaclouds-scalingsdatests/pom.xml
+++ b/modaclouds-scalingsdatests/pom.xml
@@ -255,16 +255,6 @@
 			<version>1.0.19</version>
 		</dependency>
 		<dependency>
-			<groupId>org.cloudml</groupId>
-			<artifactId>websocket</artifactId>
-			<version>2.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.cloudml</groupId>
-			<artifactId>ui.shell</artifactId>
-			<version>2.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
 			<groupId>it.polimi.tower4clouds</groupId>
 			<artifactId>rules</artifactId>
 			<version>0.3-SNAPSHOT</version>
@@ -329,5 +319,10 @@
 			<artifactId>javax.websocket-api</artifactId>
 			<version>1.1</version>
 		</dependency>
+		<dependency>
+            <groupId>it.polimi.modaclouds.tests</groupId>
+            <artifactId>cloudmldaemon</artifactId>
+            <version>0.0.5</version>
+        </dependency>
 	</dependencies>
 </project>
