Now it uses a JSON configuration file.

--- a/modaclouds-scalingsdatests/resources/configuration.properties
+++ b/modaclouds-scalingsdatests/resources/configuration.properties
@@ -1,5 +1,12 @@
-REGION=eu-west-1
-SECURITY_GROUP_NAME=ScalingSDATests
+Amazon_REGION=eu-west-1
+Amazon_SECURITY_GROUP_NAME=ScalingSDATests
+Amazon_CREDENTIALS=credentials.properties
+Amazon_PRICE_MARGIN=0.35
+
+Flexiant_REGION=null
+Flexiant_SECURITY_GROUP_NAME=all
+Flexiant_CREDENTIALS=credentialsFlexiant.properties
+Flexiant_PRICE_MARGIN=0.0
 
 client_KEYPAIR_NAME=desantis-ireland
 client_AMI=ami-0a92d87d
@@ -15,6 +22,7 @@ client_RETRIEVE_FILES=/home/ubuntu/jmeter.log
 client_JAVA_PARAMETERS=-Xms7g -Xmx7g
 client_METRICS=CPUUtilization
 client_NAME=JMeter
+client_PROVIDER=Amazon
 
 mic_KEYPAIR_NAME=desantis-ireland
 mic_AMI=ami-306b2a47
@@ -35,6 +43,7 @@ mic_ADD_TO_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS
 mic_DEL_FROM_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/deregister_from_lb %s
 mic_METRICS=CPUUtilization
 mic_NAME=MiC
+mic_PROVIDER=Amazon
 
 httpagent_KEYPAIR_NAME=desantis-ireland
 httpagent_AMI=ami-3848024f
@@ -59,6 +68,7 @@ httpagent_ADD_TO_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_
 httpagent_DEL_FROM_LOAD_BALANCER=export AWS_ACCESS_KEY_ID=%s && export AWS_SECRET_ACCESS_KEY=%s && export AWS_DEFAULT_REGION=%s && bash /home/ubuntu/deregister_from_lb %s
 httpagent_METRICS=CPUUtilization
 httpagent_NAME=HTTPAgent
+httpagent_PROVIDER=Amazon
 
 database_KEYPAIR_NAME=desantis-ireland
 database_AMI=ami-62289215
@@ -70,6 +80,7 @@ database_SSH_USER=ubuntu
 database_SSH_PASS=ubuntu
 database_METRICS=CPUUtilization
 database_NAME=DataBase
+database_PROVIDER=Amazon
 
 mpl_KEYPAIR_NAME=desantis-ireland
 mpl_AMI=ami-6a48021d
@@ -94,9 +105,10 @@ mpl_MP_PORT=8170
 mpl_METRICS=CPUUtilization
 mpl_NAME=MPLSDA
 mpl_DONT_OVERRIDE_TYPE=true
+mpl_PROVIDER=Amazon
 
 lb_KEYPAIR_NAME=polimi-review-2014
-lb_AMI=ami-47a23a30
+lb_AMI=ami-6a48021d
 lb_SIZE=m3.large
 lb_INSTANCES=1
 lb_DISK=8
@@ -112,3 +124,4 @@ lb_RETRIEVE_FILES=/var/log/haproxy.log;/tmp/hrapi.log
 lb_PORT=8080
 lb_METRICS=CPUUtilization
 lb_NAME=LB
+lb_PROVIDER=Flexiant
