--- a/modaclouds-scalingsdatests/resources/configuration.json
+++ b/modaclouds-scalingsdatests/resources/configuration.json
@@ -47,8 +47,8 @@
             "SSH_pass": "ubuntu",
             "protocol": "http",
             "port": 8080,
-            "downloader": "cd ~ && curl -O https://raw.githubusercontent.com/deib-polimi/modaclouds-tests/master/machines/MiC/downloadEverything.sh",
-            "installer": "bash /home/ubuntu/downloadEverything.sh && bash /home/ubuntu/installEverything",
+            "downloader": "cd ~ && curl -O https://raw.githubusercontent.com/deib-polimi/modaclouds-tests/master/machines/MiC/downloadEverything.sh && bash /home/ubuntu/downloadEverything.sh",
+            "installer": "bash /home/ubuntu/installEverything",
             "updater": "bash /home/ubuntu/updateEverything",
             "starter": "sudo bash /home/ubuntu/snapshotMICStarter %s %s %s && source /home/ubuntu/.bashrc && bash /home/ubuntu/startImperialDC",
             "retrieve_files": [
@@ -75,8 +75,8 @@
             "SSH_pass": "ubuntu",
             "protocol": "http",
             "port": 8080,
-            "downloader": "cd ~ && curl -O https://raw.githubusercontent.com/deib-polimi/modaclouds-tests/master/machines/HTTPAgent/downloadEverything.sh",
-            "installer": "bash /home/ubuntu/downloadEverything.sh && bash /home/ubuntu/installEverything",
+            "downloader": "cd ~ && curl -O https://raw.githubusercontent.com/deib-polimi/modaclouds-tests/master/machines/HTTPAgent/downloadEverything.sh && bash /home/ubuntu/downloadEverything.sh",
+            "installer": "bash /home/ubuntu/installEverything",
             "updater": "bash /home/ubuntu/updateEverything",
             "starter": "sudo bash /home/ubuntu/startHTTPAgent %2$s %3$s && source /home/ubuntu/.bashrc && bash /home/ubuntu/startImperialDC",
             "retrieve_files": [
@@ -122,8 +122,8 @@
             "SSH_pass": "ubuntu",
             "protocol": "http",
             "port": 8080,
-            "downloader": "cd ~ && curl -O https://raw.githubusercontent.com/deib-polimi/modaclouds-tests/master/machines/MPL/downloadEverything.sh",
-            "installer": "bash /home/ubuntu/downloadEverything.sh && bash /home/ubuntu/installEverything",
+            "downloader": "cd ~ && curl -O https://raw.githubusercontent.com/deib-polimi/modaclouds-tests/master/machines/MPL/downloadEverything.sh && bash /home/ubuntu/downloadEverything.sh",
+            "installer": "bash /home/ubuntu/installEverything",
             "updater": "bash /home/ubuntu/updatePlatform && bash /home/ubuntu/updateSDA",
             "starter": "bash /home/ubuntu/snapshotMPStarter %s",
             "starter_bg": "cd /home/ubuntu/data2stdout && nohup bash /home/ubuntu/data2stdout/tower4clouds-data2stdout 8001 > /home/ubuntu/logs/data2stdout.log 2>&1",
@@ -175,8 +175,8 @@
             "OS": "Linux/UNIX",
             "SSH_user": "ubuntu",
             "SSH_pass": "ubuntu",
-            "downloader": "cd ~ && curl -O https://raw.githubusercontent.com/deib-polimi/modaclouds-tests/master/machines/LB/downloadEverything.sh",
-            "installer": "bash /home/ubuntu/downloadEverything.sh && bash /home/ubuntu/installEverything",
+            "downloader": "cd ~ && curl -O https://raw.githubusercontent.com/deib-polimi/modaclouds-tests/master/machines/LB/downloadEverything.sh && bash /home/ubuntu/downloadEverything.sh",
+            "installer": "bash /home/ubuntu/installEverything",
             "updater": "bash /home/ubuntu/updateLoadBalancer",
             "starter": "bash /home/ubuntu/startLoadBalancer",
             "stopper": "bash /home/ubuntu/stopLoadBalancer",
