--- a/modaclouds-scalingsdatests/pom.xml
+++ b/modaclouds-scalingsdatests/pom.xml
@@ -324,5 +324,10 @@
             <artifactId>cloudmldaemon</artifactId>
             <version>0.0.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.tyrus</groupId>
+            <artifactId>tyrus-container-jdk-client</artifactId>
+            <version>1.11</version>
+        </dependency>
 	</dependencies>
 </project>
