--- a/modaclouds-scalingsdatests/resources/configuration.json
+++ b/modaclouds-scalingsdatests/resources/configuration.json
@@ -53,7 +53,7 @@
             "downloader": "cd ~ && curl -O https://raw.githubusercontent.com/deib-polimi/modaclouds-tests/master/machines/downloadEverything.sh && bash /home/ubuntu/downloadEverything.sh MiC",
             "installer": "bash /home/ubuntu/installEverything",
             "updater": "bash /home/ubuntu/updateEverything",
-            "starter": "sudo bash /home/ubuntu/snapshotMICStarter %s %s %s && source /home/ubuntu/.bashrc && bash /home/ubuntu/startImperialDC",
+            "starter": "sudo bash /home/ubuntu/snapshotMICStarter %s %s %s",
             "retrieve_files": [
                 "/tmp/imperial_dc.log",
                 "/home/ubuntu/nohup-glass.out",
@@ -79,12 +79,9 @@
             "protocol": "http",
             "port": 8080,
             "downloader": "cd ~ && curl -O https://raw.githubusercontent.com/deib-polimi/modaclouds-tests/master/machines/downloadEverything.sh && bash /home/ubuntu/downloadEverything.sh HTTPAgent",
-            "fake_installer": "echo uffa",
-            "fake_updater": "echo uffa",
-            "fake_starter": "echo uffa",
             "installer": "bash /home/ubuntu/installEverything",
             "updater": "bash /home/ubuntu/updateEverything",
-            "starter": "sudo bash /home/ubuntu/startHTTPAgent %2$s %3$s && source /home/ubuntu/.bashrc && bash /home/ubuntu/startImperialDC",
+            "starter": "sudo bash /home/ubuntu/startHTTPAgent %2$s %3$s",
             "retrieve_files": [
                 "/tmp/imperial_dc.log",
                 "/home/ubuntu/logs/catalina.out",
