First update for supporting the autoscaling reasoner

--- a/modaclouds-scalingsdatests/resources/configuration.json
+++ b/modaclouds-scalingsdatests/resources/configuration.json
@@ -134,9 +134,9 @@
                 "/home/ubuntu/CloudML-Shell.log",
                 "/home/ubuntu/CloudML-WebSocket.log",
                 "/home/ubuntu/logs/fuseki.log",
-                "/home/ubuntu/tower4clouds/manager/manager-server/target/manager-server-0.3-SNAPSHOT/mgr.log",
-                "/home/ubuntu/tower4clouds/data-analyzer/target/data-analyzer-0.3-SNAPSHOT/da.log",
-                "/home/ubuntu/tower4clouds/observers/rdf-history-db/rdf-history-db-main/target/rdf-history-db-main-0.3-SNAPSHOT/hdb.log",
+                "/home/ubuntu/tower4clouds/manager/manager-server/target/manager-server-0.4-SNAPSHOT/mgr.log",
+                "/home/ubuntu/tower4clouds/data-analyzer/target/data-analyzer-0.4-SNAPSHOT/da.log",
+                "/home/ubuntu/tower4clouds/observers/rdf-history-db/rdf-history-db-main/target/rdf-history-db-main-0.4-SNAPSHOT/hdb.log",
                 "/home/ubuntu/logs/data2stdout.log",
                 "/home/ubuntu/sda.out",
                 "/home/ubuntu/cpu.out",
@@ -154,11 +154,13 @@
                 "/home/ubuntu/modaclouds-sda/Forecastingregister_-571442537.mat",
                 "/home/ubuntu/modaclouds-sda/ForecastingsaveAnswers_-571442537.mat",
                 "/home/ubuntu/modaclouds-sda/ForecastinganswerQuestions_-571442537.mat",
-                "/home/ubuntu/modaclouds-sda/ForecastinggetPage_1862725787.mat"
+                "/home/ubuntu/modaclouds-sda/ForecastinggetPage_1862725787.mat",
+                "/home/ubuntu/logs/autoscalingReasoner.log",
             ],
             "SDA_starter": "bash /home/ubuntu/startSDA %s",
             "CloudML_starter": "bash /home/ubuntu/CloudMLDaemon -port %s",
             "CloudML_stopper": "bash /home/ubuntu/CloudMLDaemon -stop -port %s",
+            "AR_starter": "bash /home/ubuntu/startAutoscalingReasoner %s %s %s %s %s %s %s %s",
             "remote_path": "/home/ubuntu/logs/scalingsdatests",
             "CloudML_port": 9030,
             "MP_port": 8170,
