--- a/modaclouds-scalingsdatests/resources/configuration.json
+++ b/modaclouds-scalingsdatests/resources/configuration.json
@@ -134,9 +134,9 @@
                 "/home/ubuntu/CloudML-Shell.log",
                 "/home/ubuntu/CloudML-WebSocket.log",
                 "/home/ubuntu/logs/fuseki.log",
-                "/home/ubuntu/tower4clouds/manager/manager-server/target/manager-server-0.4-SNAPSHOT/mgr.log",
-                "/home/ubuntu/tower4clouds/data-analyzer/target/data-analyzer-0.4-SNAPSHOT/da.log",
-                "/home/ubuntu/tower4clouds/observers/rdf-history-db/rdf-history-db-main/target/rdf-history-db-main-0.4-SNAPSHOT/hdb.log",
+                "/home/ubuntu/tower4clouds/manager/manager-server/target/manager-server-0.3.1/mgr.log",
+                "/home/ubuntu/tower4clouds/data-analyzer/target/data-analyzer-0.3.1/da.log",
+                "/home/ubuntu/tower4clouds/observers/rdf-history-db/rdf-history-db-main/target/rdf-history-db-main-0.3.1/hdb.log",
                 "/home/ubuntu/logs/data2stdout.log",
                 "/home/ubuntu/sda.out",
                 "/home/ubuntu/cpu.out",
