--- a/modaclouds-scalingsdatests/resources/configuration.json
+++ b/modaclouds-scalingsdatests/resources/configuration.json
@@ -165,6 +165,7 @@
             "remote_path": "/tmp/scalingsdatests",
             "CloudML_port": 9030,
             "MP_port": 8170,
+            "observer_port": 8001,
             "metrics": [
                 "CPUUtilization"
             ],
