--- a/modaclouds-scalingsdatests/pom.xml
+++ b/modaclouds-scalingsdatests/pom.xml
@@ -245,6 +245,11 @@
 			<version>2.7.8</version>
 		</dependency>
 		<dependency>
+			<groupId>org.fusesource.jansi</groupId>
+			<artifactId>jansi</artifactId>
+			<version>1.11</version>
+		</dependency>
+		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>2.8.1</version>
@@ -320,14 +325,14 @@
 			<version>1.1</version>
 		</dependency>
 		<dependency>
-            <groupId>it.polimi.modaclouds.tests</groupId>
-            <artifactId>cloudmldaemon</artifactId>
-            <version>0.0.5</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.tyrus</groupId>
-            <artifactId>tyrus-container-jdk-client</artifactId>
-            <version>1.11</version>
-        </dependency>
+			<groupId>it.polimi.modaclouds.tests</groupId>
+			<artifactId>cloudmldaemon</artifactId>
+			<version>0.0.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.tyrus</groupId>
+			<artifactId>tyrus-container-jdk-client</artifactId>
+			<version>1.11</version>
+		</dependency>
 	</dependencies>
 </project>
